--- a/app/views/catalogs/index.html.erb
+++ b/app/views/catalogs/index.html.erb
@@ -24,7 +24,7 @@
     <td><%= note.dest_name %></td>
     <td><%= note.status_description %></td>
     <td><%= link_to 'HTML Version', [@catalog, note] %></td>
- 	<td>| <%= link_to 'View PDF', note.pdfdoc.url -%></td>
+ 	<td>| <%= link_to 'View PDF', note.letter.url -%></td>
     <td>| <%= link_to 'Edit', edit_catalog_note_path(@catalog, note) %></td>
     <td>| <%= link_to 'Delete', [@catalog, note], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
