--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= javascript_include_tag "jquery-ui.js" %>
   <%= javascript_include_tag "script.js" %>
   <%= csrf_meta_tag %>
-  <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+  <%= favicon_link_tag %>
   <title>CarrieMail</title>
 
 </head>
