--- a/app/views/devise/menu/_header_items.html.erb
+++ b/app/views/devise/menu/_header_items.html.erb
@@ -1,6 +1,5 @@
-<% if controller_name != 'sessions' && controller_name != 'registrations' %>
-<div id="menu-items">
-	<ul id="utility-nav">
+<div id="mainmenu">
+	<ul>
 		<% if @user.id != session[:guest_user_id] -%>
 		<li><%= @user.name %>
 			<ul>
@@ -17,4 +16,3 @@
 		<li>Contact Us</li>	
 	</ul>
 </div>
-<% end %>
