--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -3,36 +3,7 @@
 </div>
 
 <div id='envelope'>
-	<div id='return-address'>
-		Return to:
-		<div>
-		<%= @note.return_name %>
-		</div>
-		<div>
-		<%= @note.return_street %>
-		</div>
-		<div>
-		<%= @note.return_addr_line2 %>
-		</div>
-		<div>
-		<%= @note.return_city %>, <%= @note.return_state %> <%= @note.return_zip %>
-		</div>
-	</div>
-	<div id='destination-address'>
-		Destination:
-		<div>
-		<%= @note.dest_name %>
-		</div>
-		<div>
-		<%= @note.dest_street %>
-		</div>
-		<div>
-		<%= @note.dest_addr_line2 %>
-		</div>
-		<div>
-		<%= @note.dest_city %>, <%= @note.dest_state %> <%= @note.dest_zip %>
-		</div>
-	</div>
+  <%= render 'envelope' -%>
 </div>
 	
 <div id='send-button'>
