--- a/app/views/notes/standard_envelope.pdf.erb
+++ b/app/views/notes/standard_envelope.pdf.erb
@@ -6,18 +6,7 @@
 	<style>
 	@page { size:5.5in 3.5in; }
 	@page { margin:10pt 10pt 10pt 10pt;}
-	@page {	@top-left {
-				content: "CarrieMail";
-				color: red;
-			}
-	}	
-	@page {prince-shrink-to-fit: auto;}
 
-	#printed-letter {
-		font-family: 'La Belle Aurore', arial, serif;
-		font-size: 28pt;
-	}
-	
 	#printed-envelope {
 		font-family: 'La Belle Aurore', arial, serif;
 		font-size: 12pt;
@@ -29,7 +18,7 @@
 	<title>Carriemail</title>
 </head>
 <body>
-	<%= render 'letter.html' %>
+	<%= render 'envelope.html' %>
 </body>
 </html>
 
