--- a/app/views/layouts/_carrie-image.html.erb
+++ b/app/views/layouts/_carrie-image.html.erb
@@ -1,3 +1,3 @@
 <div id="carrie_img" class="l">
-	<%= image_tag("CarriemailBasketLogo.jpg") %>
+	<%= link_to image_tag("CarriemailBasketLogo.jpg"), home_path %>
 </div><!--#carrie_img-->
