use compass and blueprint mixins for buttons and start payment updates

--- a/app/stylesheets/partials/_base.scss
+++ b/app/stylesheets/partials/_base.scss
@@ -28,7 +28,7 @@ $featurette-width: 195px;
 $featurette-height: 56px;
 $featurette-img-blue: url('images/blue-step.png') no-repeat 0 0;
 // $script-font: 'La Belle Aurore', arial, serif;
-
+$green: rgb(113,124,51); // green
 
 
 
