--- a/app/views/layouts/_featurettes.html.erb
+++ b/app/views/layouts/_featurettes.html.erb
@@ -4,7 +4,7 @@
 			<h1>Write</h1>
 		</div>
 		<div class="info">
-			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
+			<p>Write a message to someone special<p>
 		</div>
 	</div>
 	<div id="second" class="block">
@@ -12,7 +12,7 @@
 			<h1>Check</h1>
 		</div>
 		<div class="info">
-			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
+			<p>Preview the message exactly how they will see it<p>
 		</div>
 	</div>
 	<div id="third" class="block">
@@ -20,7 +20,7 @@
 			<h1>Relax</h1>
 		</div>
 		<div class="info">
-			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
+			<p>Relax while Carrie delivers the message<p>
 		</div>
 	</div>
 </div>
