--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,30 +1,19 @@
+<div id="main">
 <% unless @catalog.notes.empty? %>
 
 <% @notes.each do |note| %>
-  <div id="notelist" class="<%= cycle("even", "odd") %>">
-	<ul>
+	<ul id="notelist">
     <li><%= note.created_at.strftime("%m/%d/%y") %></li>
     <li><%= note.dest_name %></li>
     <li><%= note.status_description %></li>
-	<li><div class="small-icon">
-		<%= link_to image_tag(note.letter.url(:thumb)), note.letter.url -%>
-	</div>
-	</li>
-	<li><div class="small-icon">
-		<%= link_to image_tag(note.envelope.url(:thumb)), note.envelope.url -%>
-		</div>
-	</li>
-	<li><div class="small-icon">
-		<%= link_to image_tag("page_white_edit.png"), edit_catalog_note_path(@catalog, note) -%>
-	</div></li>
-	<li><div class="small-icon">
-		<%= link_to image_tag("dialog-close.png"), [@catalog, note], :confirm => 'Are you sure?', :method=> :delete -%> 
-	</div></li>
+	<li><%= link_to image_tag(note.letter.url(:thumb)), catalog_note_path(@catalog, note) -%></li>
+	<li><%= link_to image_tag("page_white_edit.png"), edit_catalog_note_path(@catalog, note) -%></li>
+	<li><%= link_to image_tag("dialog-close.png"), [@catalog, note], :confirm => 'Are you sure?', :method=> :delete -%></li>
 	</ul>
-  </div>
 <% end %>
 
 <br />
 <% end %>
 
-<%= link_to 'Send a Card', new_catalog_note_path(@catalog) %>
+<%= link_to 'Send a Card', new_catalog_note_path(@catalog), :id => 'send' %>
+</div>
